# dynamic-linking-exploration

./: .gitignore  dynamic-linking-exploration.cabal  link-dynamically.bash
app/: DummyModule.hs  GHCRuntimeLinking.hs  HsMain.hs  Main.hs  PluginsExploration.hs
testlibs/c-linkage-example/: clean.bash  compile-steps.bash  ctest2.c  progdl.c
testlibs/testlib1/: buildlib.bash
testlibs/testlib1/src/: Lib.hs
testlibs/testlibFFI/: buildlib.bash
testlibs/testlibHS1/: buildlib.bash
testlibs/testlibHS1/src/: HsLib.hs
