name:                dynamic-linking-exploration
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/michaxm/dynamic-linking-exploration#readme
license:             BSD3
license-file:        LICENSE
author:              Axel Mannhardt
maintainer:          example@example.com
copyright:           2015 Axel Mannhardt
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dynamic-linking-exploration
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -dynamic
  build-depends:       base
                     , unix
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaxm/dynamic-linking-exploration
